--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         version_lottie = "3.3.1"
         version_retrofit = "2.9.0"
         version_moshi = "1.8.0"
+        version_coil = "1.2.2"
     }
 
     repositories {
