--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,5 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
     // Image display
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation "io.coil-kt:coil:1.2.2"
 }
